--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "deploy": "strapi deploy",
     "develop": "strapi develop",
     "start": "strapi start",
-    "strapi": "strapi"
+    "strapi": "strapi",
+    "postinstall": "cd src/plugins/post-comments && npm install && npm run build"
   },
   "dependencies": {
     "@strapi/plugin-cloud": "5.10.3",
